--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                            <button id="phone-minus-button" class="btn btn-default">
                               <i class="fas fa-minus"></i>
                            </button>
-                           <input id="phone-cart-no" type="text" class="form-control text-center" value="1">
+                           <input  id="phone-cart-no" type="text" class="form-control text-center" value="1" readonly>
                            <button id="phone-plus-button" class="btn btn-default">
                               <i class="fas fa-plus"></i>
                            </button>
@@ -50,7 +50,7 @@
                            <button id="case-minus-button" class="btn btn-default">
                               <i class="fas fa-minus"></i>
                            </button>
-                           <input id="case-cart-no" type="text" class="form-control text-center" value="1">
+                           <input id="case-cart-no" type="text" class="form-control text-center" value="1" readonly>
                            <button id="case-plus-button" class="btn btn-default">
                               <i class="fas fa-plus"></i>
                            </button>
@@ -85,6 +85,10 @@
          </div>
       </div>
    </section>
+
+   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 </body>
 <script>
    //Phone plus Button Event handler
